# block_hand_bitcoin

./: README.md  index.html  leadme.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.svelte  Header.svelte  MnemonicCard.svelte  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
